# financial-independence-forecaster

./: .gitignore  CHANGELOG.md  CODE_STRUCTURE.md  README.md  WITHDRAWAL_GUIDE.md  app.py  callbacks.py  dashboard.py  forecast.py  pyproject.toml  requirements.txt
.cursor/rules/: python-architecture-boundaries.mdc  python-module-design.mdc  python-quality-guardrails.mdc
.github/workflows/: deploy-pages.yml
assets/: style.css
components/: __init__.py  charts.py  inputs.py
docs/migration/: fallback-v1.md  formatting-policy.md  python-contract.md
scripts/: generate_forecast_fixtures.py
src/financial_forecaster/: __init__.py  app.py  callbacks.py  dashboard.py  forecast.py  theme.py
src/financial_forecaster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/financial_forecaster/components/: charts.py  input_sections.py  inputs.py
src/financial_forecaster/styles/: forms.py  inputs.py
tests/: test_forecast.py
web/: astro.config.mjs  package-lock.json  package.json
web/scripts/: check-node-version.mjs
web/src/application/: buildForecastViewModel.test.ts  buildForecastViewModel.ts  buildForecasterPresentation.ts
web/src/components/: ForecasterApp.state.test.ts  ForecasterApp.tsx
web/src/components/forecaster/: AssetsSection.tsx  InputsPanel.tsx  (+10 more)
web/src/domain/: forecast.test.ts  forecast.ts  ukBaseline.ts
web/src/fixtures/: forecast-fixtures.json
web/src/layouts/: Layout.astro
web/src/pages/: index.astro
web/src/styles/: base.css  global.css  layout.css  responsive.css  sections.css  tokens.css
web/src/types/: forecast.ts
